fix layout issues

--- a/src/public/css/custom.css
+++ b/src/public/css/custom.css
@@ -10,7 +10,7 @@
 }
 
 .price {
-    font-size: 5vmax;
+    font-size: 5.5vmax;
     color: #ffcc00;
 }
 
